tests/ast_interpreter/err_int_type.expected
<string>:2:11: error: int cannot be applied to Null
    print(int(null));
          ^^^^^^^^^
