tests/ast_interpreter/err_int_type.nx
fun main() {
    print(int(null));
}
